@@ -10,7 +10,7 @@ class TestLocalApp(test_base.BaseTestCase):
         def hello_handler(request, *args, **kwargs):
             return webapp2.Response('Hello, World!')
 
-        app = local_app.WSGIApplication([('/', hello_handler)], debug=True)
+        app = local_app.WSGIApplication([('/', hello_handler)])
         rsp = app.get_response('/')
         self.assertEqual(rsp.status_int, 200)
         self.assertEqual(rsp.body, 'Hello, World!')
